[package]
name = "axum-hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
auth0-jwt = { version = "0.1.0", path = "../..", features = ["axum", "claims"] }
axum = "0.6.1"
serde = { version = "1.0.151", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
